aumento de las tarjetas Qu 450

--- a/css/queries.css
+++ b/css/queries.css
@@ -347,6 +347,12 @@
         font-size: 12px;
         padding: 5px;
     }
+
+
+    .socialMedia .tarjeta {
+        width: 80%;
+        height: 325px;
+    }
 }
 
 
