--- a/css/styleCertificates.css
+++ b/css/styleCertificates.css
@@ -8,6 +8,16 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
+#reco{
+    padding: 0px 20px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.recoMv{
+    display: none;
+}
+
 
 .borde{
     height: 100px;
@@ -29,7 +39,7 @@ body{
 
 body h1{
     width: auto;
-    margin-bottom: 50px;
+    margin-bottom: 15px;
     font-size: 23px;
     font-family: 'Radio Canada', sans-serif;
 }
@@ -53,13 +63,14 @@ span{
     padding: 130px 0px;
 }
 
-.certificate{
+.certificate {
     height: auto;
     width: 60%;
     display: flex;
-    flex-direction: wrap;
-    border: 2px solid rgb(184, 184, 184);
+    flex-direction: row;
+    border: 2px solid rgb(110 110 110);
     border-radius: 10px;
+    background-color: #3e57831a;
 }
 
 .info{
@@ -76,7 +87,7 @@ span{
 .img img:hover{
     transform: scale(2,2);
     transition: .4s;
-    padding: 20px;
+    padding: 3px;
     border: 3px solid rgb(184, 184, 184);
     border-radius: 10px;
     background-color: #3e5783;
@@ -92,12 +103,11 @@ span{
     position: fixed;
     width: 40px;
     top: 10px;
-    transform: rotate(270deg);
     left: 10px;
 }
 
 #back:hover{
-    width: 50px;
+    transform: scale(1.1 , 1.1);
 }
 
 /* Animaciones */
@@ -107,16 +117,16 @@ span{
     animation-duration: 1s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
-  }
+}
   
-  .fast {
+.fast {
     -webkit-animation-duration: 0.4s;
     animation-duration: 0.4s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
-  }
+}
   
-  @keyframes fadeIn {
+@keyframes fadeIn {
     from {
       opacity: 0;
     }
@@ -124,8 +134,55 @@ span{
     to {
       opacity: 1;
     }
-  }
+}
   
-  .fadeIn {
+.fadeIn {
     animation-name: fadeIn;
-  }
+}
+
+@media ( max-width:1000px ) {
+
+    .certificates{
+        padding: 90px 0px;
+    }
+    
+    .certificate {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info {
+        width: 100%;
+        border-bottom: 1px solid gray;
+    }
+
+    .img {
+        width: 58%;
+    }
+}
+
+@media ( max-width: 700px ) {
+
+    .certificates {
+        padding: 40px 0px;
+    }
+
+    .img {
+        width: 90%;
+    }
+
+    #back {
+        position: fixed;
+        width: 30px;
+    }
+
+    .recoPc{
+        display: none;
+    }
+
+    .recoMv{
+        display: block;
+    }
+}
+
+
