--- a/css/styles.css
+++ b/css/styles.css
@@ -257,7 +257,15 @@ body p{
     flex-direction: column;
     background: white;
     transform: none;
-    height: 400px;
+    justify-content: space-between;
+    height: 420px;
+}
+
+.contSuperior{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .socialMedia .tarjeta img{
@@ -288,8 +296,6 @@ body p{
     color: #273b49;
     font-family: 'Ubuntu', sans-serif;
     cursor: pointer;
-    position: relative;
-    bottom: -75px;
 }
 
 .socialMedia .tarjeta button:hover{
